test/modules/deitz/test_module_class_conflict2.good
test_module_class_conflict2.chpl:13: error: 'use' of non-module symbol MC
